[workspace]
members = [
    "bench/common",
    "bench/frontier-cs/runner",
    "bench/oolong/runner",
    "bench/longcot/runner",
    "bench/longmemeval-rlm/runner",
    "bench/swebench/runner",
    "bench/warden-sentry/runner",
    "bench/continual-learning-bench/runner",
]
resolver = "3"

[workspace.package]
version = "0.2.131"
license = "MIT"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = "4"
dirs = "6"
regex = "1"
reqwest = { version = "0.13", default-features = false }
schemars = "0.8"
serde = "1"
serde_json = "1"
tokio = "1"
tokio-util = "0.7"

# Lash, consumed from the latest GitHub release tag.
lash = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-core = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131", default-features = false, features = ["full"] }
lash-cli = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-export = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-harness-opt = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-llm-tools = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-mode-rlm = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-mode-standard = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-plugin-observational-memory = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-plugin-rolling-history = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-plugin-tool-discovery = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-provider-anthropic = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-provider-codex = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-provider-google = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-provider-openai = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-providers-builtin = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-rlm-types = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-sqlite-store = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-standard-plugins = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-subagents = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-tool-apply-patch = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-tool-files = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-tool-search = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-tool-shell = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lash-tool-web = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }
lashlang = { git = "https://github.com/SamGalanakis/lash", tag = "v0.2.131", version = "=0.2.131" }

# Shared benchmark helpers (provider config loading from ~/.lash/config.json).
bench-common = { path = "bench/common" }
