[package]
name = "bench-clbench-lash"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "bench-clbench-lash"
path = "src/main.rs"

[dependencies]
dirs = "6"
lash-runtime = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-cli = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-sqlite-store = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-llm-tools = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-harness-opt = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-mode-rlm = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-rlm-types = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-plugin-process-controls = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-providers-builtin = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
lash-subagents = { git = "https://github.com/SamGalanakis/lash", rev = "711f993579536312d6b4e77fecae3d3e69d5a7f2", version = "=0.1.0-alpha.9" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
