[package]
name = "bench-clbench-lash"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "bench-clbench-lash"
path = "src/main.rs"

[dependencies]
bench-common = { workspace = true }
lash = { workspace = true }
lash-core = { workspace = true }
lash-sqlite-store = { workspace = true }
lash-llm-tools = { workspace = true }
lash-harness-opt = { workspace = true }
lash-protocol-rlm = { workspace = true }
lash-rlm-types = { workspace = true }
lash-plugin-process-controls = { workspace = true }
lash-subagents = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
