[package]
name = "bench-frontier-cs"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "bench-frontier-cs"
path = "src/main.rs"

[dependencies]
bench-common = { workspace = true }
lash = { workspace = true }
lash-core = { workspace = true }
lash-cli = { workspace = true }
lash-export = { workspace = true }
lash-sqlite-store = { workspace = true }
lash-llm-tools = { workspace = true }
lash-protocol-rlm = { workspace = true }
lash-rlm-types = { workspace = true }
lash-plugin-process-controls = { workspace = true }
lash-provider-openai = { workspace = true }
lash-subagents = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = "6"
dotenvy = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
