[package]
name = "bench-longcot"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "bench-longcot"
path = "src/main.rs"

[dependencies]
bench-common = { workspace = true }
lash = { workspace = true }
lash-core = { workspace = true }
lash-cli = { workspace = true }
lash-export = { workspace = true }
lash-sqlite-store = { workspace = true }
lash-llm-tools = { workspace = true }
lash-mode-rlm = { workspace = true }
lash-provider-openai = { workspace = true }
lash-lashlang-runtime = { workspace = true }
lash-subagents = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
dirs = "6"
dotenvy = "0.15"
