[package]
name = "bench-longmemeval-rlm"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "bench-longmemeval-rlm"
path = "src/main.rs"

[dependencies]
bench-common = { workspace = true }
lash = { workspace = true }
lash-core = { workspace = true }
lash-mode-rlm = { workspace = true }
lash-sqlite-store = { workspace = true }
lash-llm-tools = { workspace = true }
lash-plugin-observational-memory = { workspace = true }
lash-plugin-rolling-history = { workspace = true }
lash-standard-plugins = { workspace = true }
lash-provider-openai = { workspace = true }
lash-providers-builtin = { workspace = true }
lash-subagents = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
regex = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15"
