[package]
name = "bench-warden-sentry"
version.workspace = true
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "bench-warden-sentry"
path = "src/main.rs"

[dependencies]
bench-common = { workspace = true }
lash = { workspace = true }
lash-core = { workspace = true, features = ["testing"] }
lash-standard-plugins = { workspace = true }
lash-sqlite-store = { workspace = true }
lash-llm-tools = { workspace = true }
lash-subagents = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15"
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
